individual cards flip when clicked instead of all cards

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 <body>
   <h1>Forget Me Not</h1>
   <div class="grid">
-    <div class="card" id="card1" onclick="flip()">
+    <div class="card" id="card0">
       <div class="face front">Front</div>
       <div class="face back">Back</div>
     </div>
-    <div class="card" id="card2" onclick="flip()">
+    <div class="card" id="card1">
       <div class="face front">Front</div>
       <div class="face back">Back</div>
     </div>
-    <div class="card" id="card3" onclick="flip()">
+    <div class="card" id="card2">
       <div class="face front">Front</div>
       <div class="face back">Back</div>
     </div>
-    <div class="card" id="card4" onclick="flip()">
+    <div class="card" id="card3">
       <div class="face front">Front</div>
       <div class="face back">Back</div>
     </div>
