--- a/index.html
+++ b/index.html
@@ -7,56 +7,7 @@
 </head>
 <body>
   <h1>Forget Me Not</h1>
-  <div class="grid">
-    <div class="card" id="card0">
-      <div class="face front">Front</div>
-      <div class="face back">Back</div>
-    </div>
-    <div class="card" id="card1">
-      <div class="face front">Front</div>
-      <div class="face back">Back</div>
-    </div>
-    <div class="card" id="card2">
-      <div class="face front">Front</div>
-      <div class="face back">Back</div>
-    </div>
-    <div class="card" id="card3">
-      <div class="face front">Front</div>
-      <div class="face back">Back</div>
-    </div>
-    <div class="card" id="card4">
-      <div class="face front">Front</div>
-      <div class="face back">Back</div>
-    </div>
-    <div class="card" id="card5">
-      <div class="face front">Front</div>
-      <div class="face back">Back</div>
-    </div>
-    <div class="card" id="card6">
-      <div class="face front">Front</div>
-      <div class="face back">Back</div>
-    </div>
-    <div class="card" id="card7">
-      <div class="face front">Front</div>
-      <div class="face back">Back</div>
-    </div>
-    <div class="card" id="card8">
-      <div class="face front">Front</div>
-      <div class="face back">Back</div>
-    </div>
-    <div class="card" id="card9">
-      <div class="face front">Front</div>
-      <div class="face back">Back</div>
-    </div>
-    <div class="card" id="card10">
-      <div class="face front">Front</div>
-      <div class="face back">Back</div>
-    </div>
-    <div class="card" id="card11">
-      <div class="face front">Front</div>
-      <div class="face back">Back</div>
-    </div>
-  </div>
+  <div id="grid"></div>
 
       <!-- <table>
           <tr>
@@ -86,5 +37,57 @@
         </table> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="script.js"></script>
+<script>newBoard();</script>
 </body>
 </html>
+
+
+
+<!-- <div class="card" id="card0">
+  <div class="face front">Front</div>
+  <div class="face back">Back</div>
+</div>
+<div class="card" id="card1">
+  <div class="face front">Front</div>
+  <div class="face back">Back</div>
+</div>
+<div class="card" id="card2">
+  <div class="face front">Front</div>
+  <div class="face back">Back</div>
+</div>
+<div class="card" id="card3">
+  <div class="face front">Front</div>
+  <div class="face back">Back</div>
+</div>
+<div class="card" id="card4">
+  <div class="face front">Front</div>
+  <div class="face back">Back</div>
+</div>
+<div class="card" id="card5">
+  <div class="face front">Front</div>
+  <div class="face back">Back</div>
+</div>
+<div class="card" id="card6">
+  <div class="face front">Front</div>
+  <div class="face back">Back</div>
+</div>
+<div class="card" id="card7">
+  <div class="face front">Front</div>
+  <div class="face back">Back</div>
+</div>
+<div class="card" id="card8">
+  <div class="face front">Front</div>
+  <div class="face back">Back</div>
+</div>
+<div class="card" id="card9">
+  <div class="face front">Front</div>
+  <div class="face back">Back</div>
+</div>
+<div class="card" id="card10">
+  <div class="face front">Front</div>
+  <div class="face back">Back</div>
+</div>
+<div class="card" id="card11">
+  <div class="face front">Front</div>
+  <div class="face back">Back</div>
+</div> -->
