added deck buttons to html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <h1>Forget Me Not</h1>
+  <h1>Concentration 2016</h1>
+    <h2>How sharp is your memory? First choose your deck, then test your powers of concetration and recall.</h2>
+    <button id="bern">Feel the Bern</button>
+    <button id="90s">The '90s</button>
+    <button id="sundry">Various and Sundry</button>
   <div id="grid"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="script.js"></script>
