--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 </head>
 <body>
   <h1>Concentration 2016</h1>
-    <h2>How sharp is your memory? First choose your deck, then test your powers of concetration and recall.</h2>
-    <button id="bern">Feel the Bern</button>
-    <button id="90s">The '90s</button>
-    <button id="sundry">Various and Sundry</button>
+    <h2>How sharp is your memory? First choose your card deck, then test your powers of concetration and recall.</h2>
+    <div id="decks">
+      <button class="deckBtn" id="bern">Feel the Bern</button>
+      <button class="deckBtn" id="90s">The '90s</button>
+      <button class="deckBtn" id="sundry">Various and Sundry</button>
+    <div cl
   <div id="grid"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="script.js"></script>
