removed deck buttons, added let's play button

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 </head>
 <body>
   <h1>Concentration 2016</h1>
-    <h2>How sharp is your memory? First choose your card deck, then test your powers of concetration and recall. Find all six matches in 15 tries to win!</h2>
-    <!-- <div id="decks">
-      <button class="deckBtn" id="bern">Feel the Bern</button>
+    <p>How sharp is your memory? First choose your card deck, then test your powers of concetration and recall.</p>
+    <p>Find all six matches in 15 tries to win!</p>
+    <div id="decks">
+      <button class="deckBtn" id="startBtn">Let's play!</button>
+      <!-- <button class="deckBtn" id="bern">Feel the Bern</button>
       <button class="deckBtn" id="90s">The '90s</button>
-      <button class="deckBtn" id="sundry">Various and Sundry</button>
-    </div> -->
+      <button class="deckBtn" id="sundry">Various and Sundry</button> -->
+    </div>
   <div id="grid"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="script.js"></script>
