game ends and starts a new game when you win

--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <h1>Concentration 2016</h1>
+  <h1>Concentration: Feel the Bern Edition</h1>
     <p>How sharp is your memory? First choose your card deck, then test your powers of concetration and recall.</p>
     <p>Find all six matches in 15 tries to win!</p>
     <div id="decks">
-      <button class="deckBtn" id="startBtn">Let's play!</button>
+      <button class="btn" id="start">Let's play!</button>
       <!-- <button class="deckBtn" id="bern">Feel the Bern</button>
       <button class="deckBtn" id="90s">The '90s</button>
       <button class="deckBtn" id="sundry">Various and Sundry</button> -->
     </div>
   <div id="grid"></div>
+  <footer>
+    Designed and Coded by Clarissa Stark © || Made in DC
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="script.js"></script>
-  <script>newBoard();</script>
 </body>
-<footer>
-  Designed and Coded by Clarissa Stark © || Made in DC
-</footer>
 </html>
