made everything smaller

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="container">
     <img src="img/header.png" alt="Concentration: Feel the Bern Edition" />
-    <p>Bernie never forgets – but do you? Find the matching color pairs to test your powers of concetration and recall.</p>
+    <p>Bernie Sanders never forgets – but do you? Find the matching color pairs to test your powers of concetration and recall.</p>
     <p>Find all six matches in 15 tries or less to win!</p>
     <div id="decks">
       <button class="btn" id="start">Let's play!</button>
