--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <button class="deckBtn" id="sundry">Various and Sundry</button> -->
     </div>
     <div id="grid"></div>
+    <div id="timerDiv"></div>
     <footer>
       Designed and Coded by Clarissa Stark © || Made in DC
     </footer>
