--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Bernie Colors</title>
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -13,6 +13,7 @@
     <div id="decks">
       <button class="btn" id="start">Let's play!</button>
       <!-- <button class="deckBtn" id="bern">Feel the Bern</button>
+      remove unused code
       <button class="deckBtn" id="90s">The '90s</button>
       <button class="deckBtn" id="sundry">Various and Sundry</button> -->
     </div>
@@ -22,7 +23,7 @@
       Designed and Coded by Clarissa Stark © || Made in DC
     </footer>
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- remove jquery if not using it -->
   <script src="script.js"></script>
 </body>
 </html>
